--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "anime = pd.read_csv(\"./Data/Uncleaned/MAL2020/animes.csv\")\n",
     "print(\"This database is from Kaggle!\")\n",
@@ -188,14 +188,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 3
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "source": [
     "anime.info()"
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
     "anime = anime.drop_duplicates()\n",
     "anime.info()"
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
     "anime.columns"
    ],
@@ -295,7 +295,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 6
     }
    ],
    "metadata": {}
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "source": [
     "anime.drop(['img_url', 'link'], axis=1, inplace=True)"
    ],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "source": [
     "anime.columns"
    ],
@@ -363,7 +363,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 8
     }
    ],
    "metadata": {}
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "source": [
     "anime['synopsis'][0]"
    ],
@@ -390,7 +390,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 9
     }
    ],
    "metadata": {}
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "source": [
     "anime['genre'].head()"
    ],
@@ -429,7 +429,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 10
     }
    ],
    "metadata": {}
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "source": [
     "type(anime['genre'][0])"
    ],
@@ -456,7 +456,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 11
     }
    ],
    "metadata": {}
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "source": [
     "#Using built-in function ast.literal_eval to convert a string list into a list\n",
     "import ast\n",
@@ -487,7 +487,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 12
     }
    ],
    "metadata": {}
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "source": [
     "anime['genre'][0]"
    ],
@@ -521,7 +521,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 13
     }
    ],
    "metadata": {}
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "source": [
     "anime['genre'].loc[(anime['title'] == 'Monster')].iloc[0][0]\n"
    ],
@@ -548,7 +548,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 14
     }
    ],
    "metadata": {}
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "source": [
     "anime['aired'].head()"
    ],
@@ -580,7 +580,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 15
     }
    ],
    "metadata": {}
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "source": [
     "def split_start(aired):\n",
     "    if 'to' in aired:\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "source": [
     "anime.columns"
    ],
@@ -643,7 +643,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 17
     }
    ],
    "metadata": {}
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "source": [
     "anime['episodes'].describe()"
    ],
@@ -678,14 +678,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 18
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "source": [
     "anime['episodes'].isnull().sum()"
    ],
@@ -698,7 +698,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 19
     }
    ],
    "metadata": {
@@ -768,32 +768,58 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "source": [
-    "anime[anime['members'] == 0]"
+    "That's weird, since the number of null values is 0 and the number of 0 `members` is also 0."
    ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'counts'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_87201/1285596578.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0manime\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0manime\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'members'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcounts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda3/envs/myenv/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5485\u001b[0m         ):\n\u001b[1;32m   5486\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5487\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5488\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5489\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'counts'"
-     ]
-    }
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Let check the number of animes once again:"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "source": [
+    "anime.count()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "uid           16368\n",
+       "title         16368\n",
+       "synopsis      15583\n",
+       "genre         16368\n",
+       "episodes      15825\n",
+       "members       16368\n",
+       "popularity    16368\n",
+       "ranked        14611\n",
+       "score         15964\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Therefore, it seems that every anime has at least 1 member (actually 25 since the min value of `members` is 25.)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
